Use future to also parallelize the work when reading files and store AST json
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>